# SeedJournalV1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.production.toml  fly.staging.toml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_memory_embeddings_hnsw.py
backend/app/: __init__.py  main.py
backend/app/ai_guide/: llm.py  openai_client.py  prompts.py
backend/app/api/v1/: account.py  auth.py  entries.py  health.py  insights.py  me.py  memories.py  reflection.py  router.py  tree.py
backend/app/core/: auth_deps.py  config.py  deps.py  idempotency.py  logging.py  middleware.py  security.py
backend/app/db/: models.py  models_vector.py
backend/app/growth/: projection.py  seasons.py
backend/app/identity/: account.py  apple.py  service.py
backend/app/intelligence/: analysis.py  embeddings.py  extraction.py
backend/app/journal/: service.py
backend/app/memories/: service.py
backend/app/reflection/: service.py
backend/app/workers/: hooks.py  pipeline.py  tasks.py
backend/tests/: conftest.py  test_auth_apple.py  test_health.py  test_slice1.py  test_slice2.py  test_slice3.py  test_slice6.py  test_workers_hooks.py
docs/: AI_PIPELINE.md  API.md  APP_STORE_CONNECT_COPY.md  APP_STORE_READINESS.md  APP_STORE_SCREENSHOTS.md  AUTH_FULL_SETUP.md  COMPLETION_STATUS.md  DATABASE_SCHEMA.md  EMOTIONAL_QA_SCRIPT.md  ENABLE_GITHUB_PAGES.md  (+19 more)
(+58 files in other folders)
